--- a/package/crds/rancher.crossplane.io_providerconfigs.yaml
+++ b/package/crds/rancher.crossplane.io_providerconfigs.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.10.0
   creationTimestamp: null
-  name: providerconfigs.template.crossplane.io
+  name: providerconfigs.rancher.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: rancher.crossplane.io
   names:
     kind: ProviderConfig
     listKind: ProviderConfigList
@@ -26,7 +26,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures a Template provider.
+        description: A ProviderConfig configures a Rancher provider.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -96,8 +96,11 @@ spec:
                 required:
                 - source
                 type: object
+              rancherHost:
+                type: string
             required:
             - credentials
+            - rancherHost
             type: object
           status:
             description: A ProviderConfigStatus reflects the observed state of a ProviderConfig.
