--- a/package/crds/rancher.crossplane.io_providerconfigusages.yaml
+++ b/package/crds/rancher.crossplane.io_providerconfigusages.yaml
@@ -5,14 +5,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.10.0
   creationTimestamp: null
-  name: providerconfigusages.template.crossplane.io
+  name: providerconfigusages.rancher.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: rancher.crossplane.io
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - rancher
     kind: ProviderConfigUsage
     listKind: ProviderConfigUsageList
     plural: providerconfigusages
