--- a/package/crds/rancher.crossplane.io_storeconfigs.yaml
+++ b/package/crds/rancher.crossplane.io_storeconfigs.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.10.0
   creationTimestamp: null
-  name: storeconfigs.template.crossplane.io
+  name: storeconfigs.rancher.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: rancher.crossplane.io
   names:
     categories:
     - crossplane
