Update go module

--- a/examples/cluster/cluster.yaml
+++ b/examples/cluster/cluster.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   forProvider:
     kubeconfigSecretNamespace: default
+    region: us-east-1
     rke:
       dockerRootDir: /var/lib/docker
       enableNetworkPolicy: false
