--- a/package/crds/rancher.rancher.crossplane.io_clusters.yaml
+++ b/package/crds/rancher.rancher.crossplane.io_clusters.yaml
@@ -106,6 +106,8 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  region:
+                    type: string
                   rke:
                     description: RKEClusterConfigSpec defines the desired state of
                       RKEClusterConfig
