--- a/package/crds/rancher.crossplane.io_providerconfigs.yaml
+++ b/package/crds/rancher.crossplane.io_providerconfigs.yaml
@@ -43,6 +43,118 @@ spec:
           spec:
             description: A ProviderConfigSpec defines the desired state of a ProviderConfig.
             properties:
+              awsCreds:
+                description: AWScreds contains the credentials for AWS
+                properties:
+                  accessKeyID:
+                    description: ProviderCredentials required to authenticate.
+                    properties:
+                      env:
+                        description: Env is a reference to an environment variable
+                          that contains credentials that must be used to connect to
+                          the provider.
+                        properties:
+                          name:
+                            description: Name is the name of an environment variable.
+                            type: string
+                        required:
+                        - name
+                        type: object
+                      fs:
+                        description: Fs is a reference to a filesystem location that
+                          contains credentials that must be used to connect to the
+                          provider.
+                        properties:
+                          path:
+                            description: Path is a filesystem path.
+                            type: string
+                        required:
+                        - path
+                        type: object
+                      secretRef:
+                        description: A SecretRef is a reference to a secret key that
+                          contains the credentials that must be used to connect to
+                          the provider.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      source:
+                        description: Source of the provider credentials.
+                        enum:
+                        - None
+                        - Secret
+                        - InjectedIdentity
+                        - Environment
+                        - Filesystem
+                        type: string
+                    type: object
+                  secretAccessKey:
+                    description: ProviderCredentials required to authenticate.
+                    properties:
+                      env:
+                        description: Env is a reference to an environment variable
+                          that contains credentials that must be used to connect to
+                          the provider.
+                        properties:
+                          name:
+                            description: Name is the name of an environment variable.
+                            type: string
+                        required:
+                        - name
+                        type: object
+                      fs:
+                        description: Fs is a reference to a filesystem location that
+                          contains credentials that must be used to connect to the
+                          provider.
+                        properties:
+                          path:
+                            description: Path is a filesystem path.
+                            type: string
+                        required:
+                        - path
+                        type: object
+                      secretRef:
+                        description: A SecretRef is a reference to a secret key that
+                          contains the credentials that must be used to connect to
+                          the provider.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      source:
+                        description: Source of the provider credentials.
+                        enum:
+                        - None
+                        - Secret
+                        - InjectedIdentity
+                        - Environment
+                        - Filesystem
+                        type: string
+                    type: object
+                type: object
               credentials:
                 description: Credentials required to authenticate to this provider.
                 properties:
@@ -93,8 +205,6 @@ spec:
                     - Environment
                     - Filesystem
                     type: string
-                required:
-                - source
                 type: object
               rancherHost:
                 type: string
