Add security group ref

--- a/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
+++ b/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
@@ -109,6 +109,8 @@ spec:
                         type: string
                       securityGroupReadonly:
                         type: boolean
+                      securityGroupRef:
+                        type: string
                       sessionToken:
                         type: string
                       spotPrice:
