--- a/examples/rke1template/template.yaml
+++ b/examples/rke1template/template.yaml
@@ -1,4 +1,4 @@
-## vpcIdRef and subnetIdRef required a tag with ManagedBy: crossplane
+## vpcIdRef, subnetIdRef and securityGroupRef required a tag with ManagedBy: crossplane
 apiVersion: rke1.rancher.crossplane.io/v1alpha1
 kind: RKE1NodeTemplate
 metadata:
