--- a/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
+++ b/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
@@ -148,6 +148,10 @@ spec:
                     type: string
                   engineInstallURL:
                     type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   name:
                     type: string
                   useInternalIPAddress:
