--- a/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
+++ b/package/crds/rke1.rancher.crossplane.io_rke1nodetemplates.yaml
@@ -106,7 +106,9 @@ spec:
                       rootSize:
                         type: integer
                       securityGroup:
-                        type: string
+                        items:
+                          type: string
+                        type: array
                       securityGroupReadonly:
                         type: boolean
                       securityGroupRef:
